# fastapi_ecommerce

./: .dockerignore  .gitignore  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  ecommerce.db  pyproject.toml  requirements.txt
app/: main.py  requirements.txt  schemas.py
app/backend/: db.py
app/migrations/: env.py
app/migrations/versions/: 26a5c8e305f3_create_user_model.py  2bd2088586d3_initial_migration.py  76233ece6d6b_initial_migration.py
app/models/: category.py  products.py  review.py  user.py
app/routers/: auth.py  category.py  products.py  review.py
nginx/: fastapi_ecommerce.conf
